# dl-from-zero

./: README.md  dl.opam  dune-project  flake.nix
dl/: dune
neuralnetwork/: dune  neuralnetwork.ml
perceptron/: dune  perceptron.ml
